<resources>
    <string name="app_name">MobilneAplikacije</string>
    <string name="trenutna_lozinka">Trenutna lozinka</string>
    <string name="nova_lozinka">Nova lozinka</string>
    <string name="ponovi_novu_lozinku">Ponovi novu lozinku</string>
    <string name="email">Email</string>
    <string name="lozinka">Lozinka</string>
    <string name="prijavi_se">Prijavi se</string>
    <string name="nemas_nalog_registruj_se">Nemas nalog? Registruj se</string>
    <string name="username">Username</string>
    <string name="nivo_1">Nivo: 1</string>
    <string name="titula_pocetnik">Titula: Pocetnik</string>
    <string name="pp_0">PP: 0</string>
    <string name="xp_0">XP: 0</string>
    <string name="novcici_0">Novcici: 0</string>
    <string name="promeni_lozinku">Promeni lozinku</string>
    <string name="zavrsene_misije_0">Zavrsene misije: 0</string>
    <string name="odjavi_se">Odjavi se</string>
    <string name="korisnicko_ime">Korisnicko ime</string>
    <string name="izaberi_avatar">Izaberi avatar:</string>
    <string name="ponovi_lozinku">Ponovi lozinku</string>
    <string name="registruj_se">Registruj se</string>
    <string name="attack">Napadni</string>
    <string name="boss_hit">Pogodak! −%1$d HP</string>
    <string name="boss_miss">Promašaj!</string>
    <string name="boss_image">Boss</string>
    <string name="coin_desc">Novčić</string>
    <string name="chest_desc">Kovčeg sa nagradama</string>
    <string name="shop_anchor">Osnova za cenu (preth. boss nagrada): %1$d</string>
    <string name="shop_buy_price">Kupi (%1$d)</string>
    <string name="shop_bought">Kupljeno: %1$s</string>
    <string name="shop_weapons_boss_only">Oružje se ne može kupiti – dobija se od bosa.</string>
    <string name="shop">Prodavnica</string>
</resources>