<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_person"
            android:layout_marginBottom="16dp"/>

        <TextView android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/username"/>

        <TextView android:id="@+id/tvLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivo_1"/>

        <TextView android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titula_pocetnik"/>

        <TextView android:id="@+id/tvPP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pp_0"/>

        <TextView android:id="@+id/tvXP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xp_0"/>

        <TextView android:id="@+id/tvCoins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novcici_0"/>

        <TextView android:id="@+id/tvMissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zavrsene_misije_0"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promeni_lozinku"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/odjavi_se"/>

    </LinearLayout>
</ScrollView>
