<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="16dp"
    android:gravity="center" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText android:id="@+id/etEmail" android:hint="@string/email" android:inputType="textEmailAddress"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <EditText android:id="@+id/etPassword" android:hint="@string/lozinka" android:inputType="textPassword"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <Button android:id="@+id/btnLogin" android:text="@string/prijavi_se"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <Button android:id="@+id/btnGoRegister" android:text="@string/nemas_nalog_registruj_se"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>
</LinearLayout>
