<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trenutna_lozinka"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nova_lozinka"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/etNewPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ponovi_novu_lozinku"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"/>
</LinearLayout>
